fix for nav and Link Spacing for text with anchor tags
ref:
https://reztrip.zendesk.com/agent/tickets/89658

--- a/_sass/_home.scss
+++ b/_sass/_home.scss
@@ -214,7 +214,6 @@
       width: 100%;
       text-align: center;
       @media screen and (min-width: 500px) {
-        margin-right: 20px;
         width: auto;
         text-align: left;
       }
